// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UpgradeTrialClusterDialog /> renders correctly 1`] = `
<Modal
  className="upgrade-trial-cluster-dialog"
  data-test-id="upgrade-trial-cluster-dialog"
  modalSize="small"
  onClose={[Function]}
  onPrimaryClick={[Function]}
  onSecondaryClick={[Function]}
  onTertiaryClick={[Function]}
  primaryText="Contact sales"
  secondaryText="Enable Marketplace billing"
  showSecondary={true}
  showTertiary={true}
  tertiaryText="Cancel"
  title="Upgrade cluster from Trial"
>
  <p />
  <Form
    onSubmit={[Function]}
  >
    <p>
      Convert this trial cluster to a fully supported OpenShift Dedicated cluster.
      <br />
      <br />
      <ExternalLink
        href="https://access.redhat.com/documentation/en-us/openshift_cluster_manager/2022/html/managing_clusters/assembly-cluster-subscriptions#upgrading-osd-trial-cluster_assembly-cluster-subscriptions"
        isButton={false}
        variant="secondary"
      >
        Learn more
      </ExternalLink>
      <Alert
        className="upgrade-trial-no-quota"
        isInline={true}
        title="Your organization doesn't have enough quota to upgrade this cluster."
        variant="warning"
      >
        <Link
          to="/quota"
        >
          <Button
            id="subscriptions"
            variant="link"
          >
            View your available quota
          </Button>
        </Link>
      </Alert>
    </p>
  </Form>
</Modal>
`;

exports[`<UpgradeTrialClusterDialog /> renders correctly when an erorr occurs 1`] = `
<Modal
  className="upgrade-trial-cluster-dialog"
  data-test-id="upgrade-trial-cluster-dialog"
  modalSize="small"
  onClose={[Function]}
  onPrimaryClick={[Function]}
  onSecondaryClick={[Function]}
  onTertiaryClick={[Function]}
  primaryText="Contact sales"
  secondaryText="Enable Marketplace billing"
  showSecondary={true}
  showTertiary={true}
  tertiaryText="Cancel"
  title="Upgrade cluster from Trial"
>
  <p>
    <ErrorBox
      message="Error upgrading cluster"
      response={
        Object {
          "error": true,
          "errorMessage": "this is an error",
        }
      }
    />
  </p>
  <Form
    onSubmit={[Function]}
  >
    <p>
      Convert this trial cluster to a fully supported OpenShift Dedicated cluster.
      <br />
      <br />
      <ExternalLink
        href="https://access.redhat.com/documentation/en-us/openshift_cluster_manager/2022/html/managing_clusters/assembly-cluster-subscriptions#upgrading-osd-trial-cluster_assembly-cluster-subscriptions"
        isButton={false}
        variant="secondary"
      >
        Learn more
      </ExternalLink>
      <Alert
        className="upgrade-trial-no-quota"
        isInline={true}
        title="Your organization doesn't have enough quota to upgrade this cluster."
        variant="warning"
      >
        <Link
          to="/quota"
        >
          <Button
            id="subscriptions"
            variant="link"
          >
            View your available quota
          </Button>
        </Link>
      </Alert>
    </p>
  </Form>
</Modal>
`;
